# fastapi-base

./: .gitignore  README.MD  docker-compose.yml  dockerfile  makefile  pyproject.toml
app/: main.py
app/interfaces/: base.py
app/routes/: base.py
fastcore/: __init__.py  app.py  client_handler.py  main.py  mongo_client.py  repository.py  request.py  router.py  singleton.py  types.py
fastcore/abstract/: abstract_app.py  abstract_settings.py  abstract_user.py
fastcore/auth/: current_user.py  password.py
fastcore/middlewares/: inject_user.py
fastcore/schemas/: base.py  business.py  links_and_socials.py  utils.py
