[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = "A template for FastAPI"
authors = ["Pedro Cavalcanti"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
pymongo = "4.9"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
gunicorn = "^23.0.0"
jwt = "^1.3.1"
bcrypt = "^4.2.0"
motor = "^3.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
